--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prettier-standard-vscode",
   "displayName": "Prettier-Standard - JavaScript formatter",
   "description": "VS Code plugin for prettier + standard",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "publisher": "numso",
   "author": "Dallin Osmun <@dallinosmun>",
   "galleryBanner": {
@@ -19,7 +19,7 @@
     "url": "https://github.com/numso/prettier-standard-vscode/issues"
   },
   "engines": {
-    "vscode": "^1.35.0"
+    "vscode": "^1.60.0"
   },
   "categories": [
     "Formatters"
@@ -45,11 +45,8 @@
     "onLanguage:angular"
   ],
   "main": "./src/extension",
-  "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install"
-  },
   "devDependencies": {
-    "vscode": "^1.1.36"
+    "@types/vscode": "1.60.0"
   },
   "dependencies": {
     "prettier-standard": "16.3.0",
