--- a/package.json
+++ b/package.json
@@ -19,37 +19,48 @@
     "url": "https://github.com/numso/prettier-standard-vscode/issues"
   },
   "engines": {
-    "vscode": "^1.60.0"
+    "vscode": "^1.73.1"
   },
-  "categories": [
-    "Formatters"
-  ],
+  "categories": ["Formatters"],
   "activationEvents": [
     "onLanguage:javascript",
+    "onLanguage:mongo",
     "onLanguage:javascriptreact",
-    "onLanguage:json",
-    "onLanguage:json5",
-    "onLanguage:jsonc",
     "onLanguage:typescript",
     "onLanguage:typescriptreact",
+    "onLanguage:json",
+    "onLanguage:jsonc",
+    "onLanguage:json5",
     "onLanguage:css",
-    "onLanguage:scss",
+    "onLanguage:postcss",
     "onLanguage:less",
+    "onLanguage:scss",
+    "onLanguage:handlebars",
     "onLanguage:graphql",
     "onLanguage:markdown",
     "onLanguage:mdx",
     "onLanguage:html",
     "onLanguage:vue",
     "onLanguage:yaml",
-    "onLanguage:flow",
-    "onLanguage:angular"
+    "onLanguage:ansible",
+    "onLanguage:home-assistant",
+    "onLanguage:tailwindcss"
   ],
-  "main": "./src/extension",
+  "main": "./out/main",
+  "scripts": {
+    "esbuild:base": "esbuild ./src/extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild:prod": "yarn esbuild:base -- --minify",
+    "esbuild:dev": "yarn esbuild:base -- --sourcemap",
+    "esbuild:watch": "yarn esbuild:base -- --sourcemap --watch"
+  },
   "devDependencies": {
-    "@types/vscode": "1.60.0"
+    "@types/vscode": "^1.73.1",
+    "esbuild": "0.15.14"
   },
   "dependencies": {
-    "prettier-standard": "16.3.0",
-    "typescript": "3.9.3"
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "8.28.0",
+    "prettier": "2.7.1",
+    "typescript": "4.9.3"
   }
 }
