--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "engines": {
     "vscode": "^1.73.1"
   },
-  "categories": ["Formatters"],
+  "categories": [
+    "Formatters"
+  ],
   "activationEvents": [
     "onLanguage:javascript",
     "onLanguage:mongo",
@@ -49,9 +51,8 @@
   "main": "./out/main",
   "scripts": {
     "esbuild:base": "esbuild ./src/extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
-    "esbuild:prod": "yarn esbuild:base -- --minify",
-    "esbuild:dev": "yarn esbuild:base -- --sourcemap",
-    "esbuild:watch": "yarn esbuild:base -- --sourcemap --watch"
+    "build": "rm -rf ./out && yarn esbuild:base -- --minify && vsce package",
+    "dev": "yarn esbuild:base -- --sourcemap --watch"
   },
   "devDependencies": {
     "@types/vscode": "^1.73.1",
