--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   ],
   "main": "./out/main",
   "scripts": {
+    "postinstall": "yarn patch:eslint",
+    "patch:eslint": "sed -i.bak 's/require.resolve(\"espree\")/\"\"/' node_modules/eslint/lib/rule-tester/rule-tester.js",
     "esbuild:base": "esbuild ./src/extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
     "build": "rm -rf ./out && yarn esbuild:base --minify && vsce package",
     "dev": "yarn esbuild:base --sourcemap --watch"
@@ -62,6 +64,7 @@
     "@typescript-eslint/parser": "5.43.0",
     "eslint": "8.28.0",
     "prettier": "2.7.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "vue-eslint-parser": "9.1.0"
   }
 }
